--- a/style.css
+++ b/style.css
@@ -1,242 +1,464 @@
-.frame {
-    background-color: #ececec;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-  }
-  
-  .frame .div {
-    background-color: #ececec;
-    height: 1080px;
-    overflow: hidden;
-    position: relative;
-    width: 1920px;
-  }
-  
-  .frame .overlap-group {
-    height: 174px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 1920px;
-  }
-  
-  .frame .rectangle {
-    background-color: #e3e2e2;
-    height: 86px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 1920px;
-  }
-  
-  .frame .logo {
-    height: 168px;
-    left: 20px;
-    object-fit: cover;
-    position: absolute;
-    top: 6px;
-    width: 192px;
-  }
-  
-  .frame .overlap {
-    height: 98px;
-    left: 212px;
-    position: absolute;
-    top: 1173px;
-    width: 968px;
-  }
-  
-  .frame .text-wrapper {
-    color: #000000;
-    font-family: "Poppins-SemiBold", Helvetica;
-    font-size: 46px;
-    font-weight: 600;
-    height: 39px;
-    left: 0;
-    letter-spacing: 0.92px;
-    line-height: 39px;
-    position: absolute;
-    top: 0;
-    white-space: nowrap;
-  }
-  
-  .frame .overlap-2 {
-    height: 98px;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 968px;
-  }
-  
-  .frame .p {
-    color: #949494;
-    font-family: "Poppins-SemiBold", Helvetica;
-    font-size: 46px;
-    font-weight: 600;
-    height: 39px;
-    left: 0;
-    letter-spacing: 0.92px;
-    line-height: 39px;
-    position: absolute;
-    top: 59px;
-    white-space: nowrap;
-  }
-  
-  .frame .maximize-seu-foco {
-    color: #949494;
-    font-family: "Poppins-SemiBold", Helvetica;
-    font-size: 46px;
-    font-weight: 600;
-    height: 78px;
-    left: 523px;
-    letter-spacing: 0.92px;
-    line-height: 39px;
-    position: absolute;
-    top: 0;
-  }
-  
-  .frame .text-wrapper-2 {
-    color: #949494;
-    font-family: "Poppins-SemiBold", Helvetica;
-    font-size: 46px;
-    font-weight: 600;
-    height: 39px;
-    left: 656px;
-    letter-spacing: 0.92px;
-    line-height: 39px;
-    position: absolute;
-    top: 400px;
-    white-space: nowrap;
-  }
-  
-  .frame .digite-seu-email-wrapper {
-    align-items: center;
-    background-color: #e3e3e3;
-    border-radius: 20px;
-    display: inline-flex;
-    gap: 10px;
-    justify-content: center;
-    left: 702px;
-    padding: 10px;
-    position: absolute;
-    top: 556px;
-  }
-  
-  .frame .text-wrapper-3 {
-    color: #000000;
-    font-family: "Poppins-Light", Helvetica;
-    font-size: 24px;
-    font-weight: 300;
-    height: 39px;
-    letter-spacing: 0.48px;
-    line-height: 34px;
-    margin-top: -1px;
-    position: relative;
-    white-space: nowrap;
-    width: 496px;
-  }
-  
-  .frame .digite-sua-senha-wrapper {
-    align-items: center;
-    background-color: #e4e4e4;
-    border-radius: 20px;
-    display: inline-flex;
-    gap: 10px;
-    justify-content: center;
-    left: 702px;
-    padding: 10px;
-    position: absolute;
-    top: 630px;
-  }
-  
-  .frame .text-wrapper-4 {
-    color: #000000;
-    font-family: "Poppins-Light", Helvetica;
-    font-size: 20px;
-    font-weight: 300;
-    height: 34px;
-    left: 1009px;
-    letter-spacing: 0.4px;
-    line-height: 34px;
-    position: absolute;
-    text-decoration: underline;
-    top: 694px;
-    white-space: nowrap;
-  }
-  
-  .frame .text-wrapper-5 {
-    color: #000000;
-    font-family: "Poppins-Light", Helvetica;
-    font-size: 20px;
-    font-weight: 300;
-    height: 35px;
-    left: 704px;
-    letter-spacing: 0.4px;
-    line-height: 34px;
-    position: absolute;
-    text-decoration: underline;
-    top: 694px;
-    white-space: nowrap;
-    width: 227px;
-  }
-  
-  .frame .div-wrapper {
-    align-items: center;
-    background-color: #b5b5b5;
-    border-radius: 48.94px;
-    display: flex;
-    gap: 14.83px;
-    justify-content: center;
-    left: 808px;
-    padding: 14.83px;
-    position: absolute;
-    top: 767px;
-    width: 300px;
-  }
-  
-  .frame .text-wrapper-6 {
-    color: #000000;
-    font-family: "Poppins-Light", Helvetica;
-    font-size: 35.6px;
-    font-weight: 300;
-    letter-spacing: 0.71px;
-    line-height: 50.4px;
-    margin-top: -1.48px;
-    position: relative;
-    white-space: nowrap;
-    width: fit-content;
-  }
-  
-  .frame .user {
-    height: 32px;
-    left: 666px;
-    position: absolute;
-    top: 569px;
-    width: 32px;
-  }
-  
-  .frame .lock {
-    height: 32px;
-    left: 666px;
-    position: absolute;
-    top: 643px;
-    width: 32px;
-  }
-  
-  .frame .text-wrapper-7 {
-    color: #000000;
-    font-family: "Poppins-SemiBold", Helvetica;
-    font-size: 57.6px;
-    font-weight: 600;
-    height: 54px;
-    left: 484px;
-    letter-spacing: 1.15px;
-    line-height: 46.8px;
-    position: absolute;
-    top: 204px;
-    white-space: nowrap;
-    width: 953px;
-  }
-  
+.template {
+  background-color: #ececec;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+}
+
+.template .div {
+  background-color: #ececec;
+  overflow: hidden;
+  width: 1920px;
+  height: 5000px;
+  position: relative;
+}
+
+.template .overlap {
+  position: absolute;
+  width: 1920px;
+  height: 211px;
+  top: 0;
+  left: 0;
+}
+
+.template .rectangle {
+  height: 110px;
+  top: 0;
+  position: absolute;
+  width: 1920px;
+  left: 0;
+  background-color: var(--system-colors-overlays-activity-view-controller);
+}
+
+.template .logo {
+  position: absolute;
+  width: 206px;
+  height: 203px;
+  top: 8px;
+  left: 20px;
+  object-fit: cover;
+}
+
+.template .text-wrapper {
+  position: absolute;
+  top: 54px;
+  left: 1547px;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  font-size: 38.1px;
+  letter-spacing: 0;
+  line-height: 34.9px;
+  white-space: nowrap;
+}
+
+.template .text-wrapper-2 {
+  top: 54px;
+  left: 668px;
+  font-size: 38.1px;
+  letter-spacing: 0;
+  line-height: 34.9px;
+  white-space: nowrap;
+  position: absolute;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+}
+
+.template .text-wrapper-3 {
+  top: 54px;
+  left: 378px;
+  font-size: 38.1px;
+  line-height: 34.9px;
+  white-space: nowrap;
+  position: absolute;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  letter-spacing: 0;
+}
+
+.template .text-wrapper-4 {
+  top: 54px;
+  left: 923px;
+  font-size: 38.1px;
+  line-height: 34.9px;
+  white-space: nowrap;
+  position: absolute;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  letter-spacing: 0;
+}
+
+.template .text-wrapper-5 {
+  top: 54px;
+  left: 1180px;
+  font-size: 38.1px;
+  line-height: 34.9px;
+  white-space: nowrap;
+  position: absolute;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  letter-spacing: 0;
+}
+
+.template .overlap-group {
+  position: absolute;
+  width: 1771px;
+  height: 1278px;
+  top: 330px;
+  left: 149px;
+}
+
+.template .text-wrapper-6 {
+  position: absolute;
+  height: 39px;
+  top: 0;
+  left: 24px;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  font-size: 48px;
+  letter-spacing: 0.96px;
+  line-height: 39px;
+  white-space: nowrap;
+}
+
+.template .overlap-2 {
+  position: absolute;
+  width: 774px;
+  height: 98px;
+  top: 0;
+  left: 0;
+}
+
+.template .p {
+  position: absolute;
+  height: 39px;
+  top: 59px;
+  left: 0;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #949494;
+  font-size: 46px;
+  letter-spacing: 0.92px;
+  line-height: 39px;
+  white-space: nowrap;
+}
+
+.template .maximize-seu-foco {
+  position: absolute;
+  height: 78px;
+  top: 0;
+  left: 329px;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #949494;
+  font-size: 46px;
+  letter-spacing: 0.92px;
+  line-height: 39px;
+}
+
+.template .text-wrapper-7 {
+  width: 330px;
+  height: 123px;
+  top: 295px;
+  left: 39px;
+  text-shadow: 0px 4.32px 4.32px #00000040;
+  -webkit-text-stroke: 1.08px #ffffff;
+  font-size: 81.7px;
+  line-height: 69.8px;
+  position: absolute;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  letter-spacing: 0;
+}
+
+.template .overlap-3 {
+  position: absolute;
+  width: 1725px;
+  height: 1247px;
+  top: 30px;
+  left: 46px;
+}
+
+.template .frame {
+  display: flex;
+  flex-direction: column;
+  width: 842px;
+  height: 350px;
+  align-items: flex-start;
+  padding: 0px 4px;
+  position: absolute;
+  top: 457px;
+  left: 0;
+  background-color: #ffffff;
+  border-radius: 27px;
+}
+
+.template .text-wrapper-8 {
+  margin-top: -1px;
+  position: relative;
+  align-self: stretch;
+  font-family: "Poppins-Light", Helvetica;
+  font-weight: 300;
+  color: #000000;
+  font-size: 36px;
+  letter-spacing: 0;
+  line-height: 69.8px;
+}
+
+.template .text-wrapper-9 {
+  position: relative;
+  align-self: stretch;
+  font-family: "Poppins-Light", Helvetica;
+  font-weight: 300;
+  color: #000000;
+  font-size: 36px;
+  letter-spacing: 0;
+  line-height: 69.8px;
+}
+
+.template .Polygon_relogio {
+  position: absolute;
+  width: 658px;
+  height: 1247px;
+  top: 0;
+  left: 1067px;
+}
+
+.template .clock {
+  width: 886px;
+  height: 1009px;
+  top: 132px;
+  left: 839px;
+  position: absolute;
+  object-fit: cover;
+}
+
+.template .text-wrapper-10 {
+  width: 490px;
+  height: 123px;
+  top: 3163px;
+  left: 138px;
+  text-shadow: 0px 4.32px 4.32px #00000040;
+  -webkit-text-stroke: 1.08px #ffffff;
+  font-size: 81.7px;
+  line-height: 69.8px;
+  position: absolute;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  letter-spacing: 0;
+}
+
+.template .text-wrapper-11 {
+  width: 330px;
+  height: 123px;
+  top: 2049px;
+  left: 1159px;
+  text-shadow: 0px 4.32px 4.32px #00000040;
+  -webkit-text-stroke: 1.08px #ffffff;
+  font-size: 81.7px;
+  line-height: 69.8px;
+  position: absolute;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  letter-spacing: 0;
+}
+
+.template .overlap-group-2 {
+  position: absolute;
+  width: 936px;
+  height: 1113px;
+  top: 1699px;
+  left: 0;
+  background-image: url(./img/Polygon_timer2.png);
+  background-size: 100% 100%;
+}
+
+.template .text-wrapper-12 {
+  width: 238px;
+  height: 113px;
+  top: 191px;
+  left: 133px;
+  text-shadow: 0px 4px 4px #00000040;
+  -webkit-text-stroke: 1px #ffffff;
+  font-size: 75.7px;
+  letter-spacing: 1.51px;
+  line-height: 64.6px;
+  position: absolute;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+}
+
+.template .overlap-4 {
+  position: absolute;
+  width: 667px;
+  height: 124px;
+  top: 661px;
+  left: 134px;
+}
+
+.template .button {
+  all: unset;
+  box-sizing: border-box;
+  display: flex;
+  width: 112px;
+  height: 63px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  left: 12px;
+  background-color: #bbbbbb;
+  border-radius: 42px;
+}
+
+.template .text-wrapper-13 {
+  position: relative;
+  width: fit-content;
+  margin-top: -12px;
+  margin-bottom: -10px;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0.48px;
+  line-height: 64.6px;
+  white-space: nowrap;
+}
+
+.template .div-wrapper {
+  display: flex;
+  width: 122px;
+  height: 64px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  left: 135px;
+  background-color: #bebebe;
+  border-radius: 42px;
+}
+
+.template .text-wrapper-14 {
+  position: relative;
+  width: fit-content;
+  margin-top: -11.5px;
+  margin-bottom: -9.5px;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0.48px;
+  line-height: 64.6px;
+  white-space: nowrap;
+}
+
+.template .text-wrapper-15 {
+  position: absolute;
+  height: 76px;
+  top: 48px;
+  left: 0;
+  font-family: "Poppins-Regular", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  font-size: 12px;
+  letter-spacing: 0.24px;
+  line-height: 75.5px;
+  white-space: nowrap;
+}
+
+.template .frame-2 {
+  display: flex;
+  width: 515px;
+  height: 179px;
+  align-items: center;
+  justify-content: center;
+  gap: 11.68px;
+  padding: 11.68px;
+  position: absolute;
+  top: 423px;
+  left: 111px;
+  background-color: #f4f4f4;
+  border-radius: 25.69px;
+}
+
+.template .text-wrapper-16 {
+  position: relative;
+  width: fit-content;
+  font-family: "Poppins-SemiBold", Helvetica;
+  font-weight: 600;
+  color: #000000;
+  font-size: 128px;
+  letter-spacing: 0;
+  line-height: 75.5px;
+  white-space: nowrap;
+}
+
+.template .a-t-cnica-pomodoro {
+  position: absolute;
+  width: 663px;
+  height: 47px;
+  top: 4084px;
+  left: 139px;
+  font-family: "Poppins-Regular", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  font-size: 13.3px;
+  letter-spacing: 0.27px;
+  line-height: 22.2px;
+}
+
+.template .text-wrapper-17 {
+  position: absolute;
+  width: 663px;
+  height: 47px;
+  top: 2674px;
+  left: 1140px;
+  font-family: "Poppins-Regular", Helvetica;
+  font-weight: 400;
+  color: #000000;
+  font-size: 13.3px;
+  letter-spacing: 0.27px;
+  line-height: 22.2px;
+}
+
+.template .img {
+  width: 1568px;
+  height: 664px;
+  top: 3396px;
+  left: 139px;
+  position: absolute;
+  object-fit: cover;
+}
+
+.template .frame-3 {
+  position: absolute;
+  width: 644px;
+  height: 437px;
+  top: 2225px;
+  left: 1129px;
+  background-color: #f6f6f6;
+  border-radius: 19px;
+}
+
+.template .rectangle-2 {
+  height: 639px;
+  top: 4399px;
+  position: absolute;
+  width: 1920px;
+  left: 0;
+  background-color: var(--system-colors-overlays-activity-view-controller);
+}
